2014-06-26  Brent Fulgham  <bfulgham@apple.com>

        [Win] Fix potential buffer overrun in DLLLauncher
        https://bugs.webkit.org/show_bug.cgi?id=134351
        <rdar://problem/17469185>

        Reviewed by Darin Adler.

        * win/DLLLauncher/DLLLauncherMain.cpp: Correct error
        in end-of-buffer calculation.

2014-06-26  Tamas Gergely  <tgergely.u-szeged@partner.samsung.com>

        [EFL] Missing dependency between freetype6 and fontconfig libs.
        https://bugs.webkit.org/show_bug.cgi?id=134190

        Reviewed by Gyuyoung Kim.

        The external dependencies contain the freetype6 and the fontconfig libs.
        The fontconfig lib requires freetype, but the dependency is not set in
        the efl/jhbuild.modules file. So, during building the external libs,
        fontconfig uses the freetype package of the system, while WebKit
        binaries will use freetype from the WebKitBuild/Dependency directory.
        There are more similar dependencies that were not indicated in the
        jhbuild.modules file.

        * efl/jhbuild.modules:
          Added dependencies between libs.

2014-06-25  Brent Fulgham  <bfulgham@apple.com>

        [Win] Expose Cache Information to WinLauncher
        https://bugs.webkit.org/show_bug.cgi?id=134318

        Reviewed by Dean Jackson.

        * WinLauncher/Common.cpp: Update for new dialog.
        * WinLauncher/WinLauncher.cpp: Add support for WebCache
        and WebCoreStatistics.
        * WinLauncher/WinLauncher.h:
        * WinLauncher/WinLauncher.vcxproj/WinLauncherLib.rc:
        Update for new Cache Dialog.
        * WinLauncher/WinLauncher.vcxproj/WinLauncherLibCommon.props: Link to
        WTF.lib
        * WinLauncher/WinLauncher.vcxproj/WinLauncherLibResource.h: Update
        for new Dialog.

2014-06-26  Brent Fulgham  <bfulgham@apple.com>

        [Win] Unreviewed gardening. Use consistent line-endings in file.
